feat(*): implement merger lambda